<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Game Rating Calculator</string>
    <string name="ratings_calculator">Calculator</string>
    <string name="appName">Rating Calculator</string>
    <string name="profiles">Profiles</string>
    <string name="settings">Settings</string>
    <string name="image_description">Splash Screen</string>
    <string name="add_profile">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="rating">Rating</string>
    <string name="edit">Edit</string>
    <string name="winner">Winner</string>
    <string name="new_profile">Add Profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_rating">Rating (Default 1000)</string>
    <string name="profile_color">Color (as an integer)</string>
    <string name="provisional_text">Provisional?</string>
    <string name="profile_image">Profile Image</string>
    <string name="provisional">Prov</string>
    <string name="color">Color</string>
    <string name="save">Save</string>
    <string name="dont_save">Don\'t Save</string>
    <string name="submit">Calculate</string>
    <string name="go_back">Go Back</string>
    <string name="add_new_player">Add New Player</string>
    <string name="results">Results</string>
    <string name="player_options">Would you like to delete this person or make them the winner?</string>
    <string name="prov_games_option">Provisional Games</string>
    <string name="num_prov_games">Provisional Games Left</string>
    <string name="action_settings">Help</string>
    <string name="remove">Remove</string>
    <string name="ok">OK</string>
    <string name="help_dialog">Welcome to Game Rating Calculator!  To use the application, first go to the profiles page and use the add button to create user profiles for you and your friends.  Next, go to the calculator page and add the people you want to include in your game.  Choose a winner and then press calculate to receive the results.</string>
    
    <string name="value_error">Value of zero not accepted, using default provisional game total instead.</string>
    <string name="pressed_player_dialog">What would you like to do?</string>
    <string name="select_a_winner">Please Select a Winner</string>
    <string name="not_enough_players">You do not have enough players</string>
    <string name="not_enough_profiles">You have no more profiles</string>
    <string name="max_players_reached">The maximum number of players is </string>
    
    <string name="max_profiles">Max Number of Profiles</string>
    <string name="max_profiles_summary">The maximum allowed number of profiles</string>
    
    <string name="max_players">Max Number of Players</string>
    <string name="max_players_summary">The maximum allowed number of players in a game</string>
    
    <string name="default_provisional">Number of Provisional Games</string>
    <string name="default_provisional_summary">Games a player must play to exit provisional</string>
    
    <string name="default_rating">Default Rating</string>
    <string name="default_rating_summary">The default rating given to a player profile</string>
    
    <string name="splash_screen">Use Cat Splash Screen</string>
    <string name="splash_screen_summary">This one feels pretty self explanatory</string>
    

</resources>