<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <EditTextPreference 
        android:title="@string/max_profiles"
        android:summary="@string/max_profiles_summary"
        android:gravity="center"
        android:defaultValue="20"
        android:maxLength="4"
        android:inputType="number"
        android:key="max_prof" />
    
    <EditTextPreference 
        android:title="@string/max_players"
        android:summary="@string/max_players_summary"
        android:gravity="center"
        android:defaultValue="6"
        android:maxLength="2"
        android:inputType="number"
        android:key="max_play" />
    
    <EditTextPreference 
        android:title="@string/default_rating"
        android:summary="@string/default_rating_summary"
        android:gravity="center"
        android:defaultValue="1000"
        android:maxLength="8"
        android:inputType="number"
        android:key="def_rate" />

</PreferenceScreen>
